--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -30,8 +30,8 @@
 }
 
 .footer-logo {
-  height: 60px;
-  width: 60px;
+  height: 4rem;
+  width: 4rem;
   margin: auto;
   display: block;
   margin-bottom: 2rem;
